converted tensor to sparse encoding, successfully created full tensor of all sdl objects

--- a/SDL_Data_Mining.ipynb
+++ b/SDL_Data_Mining.ipynb
@@ -111,7 +111,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "gGSVWQdTeDeG",
-        "outputId": "68a308ae-4a7d-4f66-b804-45f17110a17b",
+        "outputId": "a4829b64-510a-455d-a2b5-a64fade50146",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 787
@@ -120,7 +120,7 @@
       "source": [
         "bddx.head(10)"
       ],
-      "execution_count": 33,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -882,7 +882,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 4
         }
       ]
     },
@@ -904,7 +904,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "KEd8mYWAouxX",
-        "outputId": "819303e6-5375-4c48-8758-801ccdad39e5",
+        "outputId": "86ecc905-4312-486a-c071-9fbe0fb05547",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 428
@@ -913,7 +913,7 @@
       "source": [
         "bddx.head()"
       ],
-      "execution_count": 35,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1165,7 +1165,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 6
         }
       ]
     },
@@ -1187,7 +1187,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "0KgDY68fr-k8",
-        "outputId": "5e490923-ef91-4c43-801a-d2b2cc260d67",
+        "outputId": "a1a29a5d-955d-4ba1-89c0-f42f11d0edfc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 428
@@ -1196,7 +1196,7 @@
       "source": [
         "bddx.head()"
       ],
-      "execution_count": 37,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1448,7 +1448,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 8
         }
       ]
     },
@@ -1484,7 +1484,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "nbJgQfbsjels",
-        "outputId": "e8df7104-a785-4b4d-c181-2928a8cb9b66",
+        "outputId": "34781c74-adbb-4478-bbd1-8da15f78f6b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 804
@@ -1493,7 +1493,7 @@
       "source": [
         "bddx.head(10)"
       ],
-      "execution_count": 39,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2090,7 +2090,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 39
+          "execution_count": 10
         }
       ]
     },
@@ -2125,7 +2125,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "SR-9rohMkUjR",
-        "outputId": "2f9d2ab8-8f1d-49b9-e4b3-4b358b4598f6",
+        "outputId": "4f521e85-81bb-4fdc-f464-41b529e7fbfe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -2134,7 +2134,7 @@
       "source": [
         "bddx.head(10)"
       ],
-      "execution_count": 42,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2390,7 +2390,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 13
         }
       ]
     },
@@ -2846,7 +2846,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "M--8pXkwvaiU",
-        "outputId": "dffd1d99-67f1-49fa-dae7-73b6c1d2f392",
+        "outputId": "02f96b3d-e6d3-4d12-a3a9-e520fdc4640d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -2855,7 +2855,7 @@
       "source": [
         "len(sdlList)"
       ],
-      "execution_count": 46,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2867,7 +2867,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 17
         }
       ]
     },
@@ -2926,7 +2926,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "16iFV7LEzMYU",
-        "outputId": "85d06800-3d09-4922-ed03-0645a0ca1fac",
+        "outputId": "31fec6db-37e2-47f2-e1f3-61929f5945e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 272
@@ -2935,7 +2935,7 @@
       "source": [
         "(sdlObjectList[6].statements)"
       ],
-      "execution_count": 50,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2961,7 +2961,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 50
+          "execution_count": 21
         }
       ]
     },
@@ -2970,10 +2970,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "kSIrzqV5zHMD",
-        "outputId": "94f990cb-0a0e-4112-88fd-0edd73a38afa",
+        "outputId": "910d049c-4b04-4e2a-d03d-abe93a239dea",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 119
+          "height": 102
         }
       },
       "source": [
@@ -2984,17 +2984,16 @@
         "  for j in (keysTemp):\n",
         "    sdlObjectList[i].getDescriptors(sdlObjectList[i].statements[j], j)"
       ],
-      "execution_count": 51,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
             "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
             "[nltk_data]     /root/nltk_data...\n",
-            "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
-            "[nltk_data]       date!\n"
+            "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger.zip.\n"
           ],
           "name": "stdout"
         }
@@ -3005,7 +3004,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "N_Jmbn68zHML",
-        "outputId": "5c45b3dd-b230-4c47-a602-0fc6db39dcad",
+        "outputId": "23d392ae-00a9-4757-9c89-92c33ec11cab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -3025,7 +3024,7 @@
         "        print('Time segment:', actorsIndex, \",  %s: %s\"%(sdlObjectList[example].actors[actorsIndex][j].description,sdlObjectList[example].actors[actorsIndex][j].action))\n",
         "    print('Scene: ', sdlObjectList[example].scene)"
       ],
-      "execution_count": 52,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -3112,7 +3111,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "p7JZmnlC4RBN",
-        "outputId": "86334a2c-be0f-4235-b59a-676a2992ec96",
+        "outputId": "59aab14f-8939-413e-ce36-65ee7473e8b3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
@@ -3144,7 +3143,7 @@
         "    if cutoff <= 0:\n",
         "        break"
       ],
-      "execution_count": 53,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -3171,18 +3170,18 @@
       "metadata": {
         "id": "A3XC3THwKg-R",
         "colab_type": "code",
+        "outputId": "f5686613-8f55-4db6-9562-6d8fc1631fc7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "f2e676d0-0a93-4d25-af1a-26a62cc43b9b"
+        }
       },
       "source": [
         "# Inspects a specific verb to try to better understand how to classify it\n",
         "for phrase in util.debug['is']:\n",
         "    print(phrase)"
       ],
-      "execution_count": 54,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -3366,7 +3365,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "rEbIGm--MDKa",
-        "outputId": "8eadcf20-8a79-4d40-c17e-471ceb00595d",
+        "outputId": "4d704abf-cab9-4d79-a015-0998a7166084",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
@@ -3376,14 +3375,14 @@
         "# https://pypi.org/project/anytree/\n",
         "pip install anytree"
       ],
-      "execution_count": 55,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting anytree\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/a8/65/be23d8c3ecd68d40541d49812cd94ed0f3ee37eb88669ca15df0e43daed1/anytree-2.8.0-py2.py3-none-any.whl (41kB)\n",
-            "\r\u001b[K     |███████▉                        | 10kB 19.2MB/s eta 0:00:01\r\u001b[K     |███████████████▊                | 20kB 1.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████▋        | 30kB 2.5MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▍| 40kB 3.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 51kB 1.7MB/s \n",
+            "\r\u001b[K     |███████▉                        | 10kB 21.0MB/s eta 0:00:01\r\u001b[K     |███████████████▊                | 20kB 2.2MB/s eta 0:00:01\r\u001b[K     |███████████████████████▋        | 30kB 2.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▍| 40kB 2.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 51kB 1.4MB/s \n",
             "\u001b[?25hRequirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.6/dist-packages (from anytree) (1.12.0)\n",
             "Installing collected packages: anytree\n",
             "Successfully installed anytree-2.8.0\n"
@@ -3499,7 +3498,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "bvS3i78kz2RE",
-        "outputId": "0b1db298-7640-4769-c667-bfdabd4577ae",
+        "outputId": "fcf78e49-38b5-4628-8bec-251e6a9a117f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -3509,7 +3508,7 @@
         "for pre, fill, node in RenderTree(rootNode):\n",
         "  print(\"%s%s\" % (pre, node.name))"
       ],
-      "execution_count": 57,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -3836,7 +3835,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "AekE_Ghj3oxH",
-        "outputId": "503881e7-b430-4c45-e8d3-833919a73c94",
+        "outputId": "772adc26-ab66-4b31-b43f-f92c7061e88f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -3846,7 +3845,7 @@
         "for pre, fill, node in RenderTree(rootNode):\n",
         "  print(\"%s%s\" % (pre, node.name))"
       ],
-      "execution_count": 60,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -4251,7 +4250,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "Aw5si2XL4KSc",
-        "outputId": "3b3d1c5f-3270-42d8-99c7-1e4a0dea83b4",
+        "outputId": "2cda691c-4cac-48bd-891f-8babce7baa8f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -4261,7 +4260,7 @@
         "for pre, fill, node in RenderTree(rootNode):\n",
         "  print(\"%s%s\" % (pre, node.name))"
       ],
-      "execution_count": 62,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -5023,7 +5022,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "06tsQzIt4zlK",
-        "outputId": "efe961ca-4cf3-41d0-dafd-1991a013173e",
+        "outputId": "e8e63614-2536-414a-b350-40df908be6c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -5033,7 +5032,7 @@
         "for pre, fill, node in RenderTree(rootNode):\n",
         "  print(\"%s%s\" % (pre, node.name))"
       ],
-      "execution_count": 66,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -5740,7 +5739,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "FQgcV7jo6wSF",
-        "outputId": "727e3c03-88eb-4881-bf7a-e5e2a8873193",
+        "outputId": "f72b3aa1-d418-4812-91e7-65f4d7eac1cf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 153
@@ -5765,19 +5764,19 @@
         "      sceneElement = scene[0]\n",
         "    "
       ],
-      "execution_count": 68,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[<__main__.Actor object at 0x7f1eefeec470>]\n",
-            "[<__main__.Actor object at 0x7f1eefeeccc0>, <__main__.Actor object at 0x7f1eefeece80>]\n",
-            "[<__main__.Actor object at 0x7f1eefeecf98>, <__main__.Actor object at 0x7f1eefeee5f8>]\n",
-            "[<__main__.Actor object at 0x7f1eefeee400>]\n",
-            "[<__main__.Actor object at 0x7f1eefeee908>]\n",
-            "[<__main__.Actor object at 0x7f1eefeeee48>]\n",
-            "[<__main__.Actor object at 0x7f1eefef46a0>, <__main__.Actor object at 0x7f1eefef4dd8>]\n",
-            "[<__main__.Actor object at 0x7f1eefef4e48>, <__main__.Actor object at 0x7f1eefef4d30>]\n"
+            "[<__main__.Actor object at 0x7f16cecdf320>]\n",
+            "[<__main__.Actor object at 0x7f16cecdfba8>, <__main__.Actor object at 0x7f16cecdf780>]\n",
+            "[<__main__.Actor object at 0x7f16cecdf7f0>, <__main__.Actor object at 0x7f16cecdf9e8>]\n",
+            "[<__main__.Actor object at 0x7f16cecdfe10>]\n",
+            "[<__main__.Actor object at 0x7f16cec67588>]\n",
+            "[<__main__.Actor object at 0x7f16cec67780>]\n",
+            "[<__main__.Actor object at 0x7f16cec67ef0>, <__main__.Actor object at 0x7f16cec6b160>]\n",
+            "[<__main__.Actor object at 0x7f16cec6b2b0>, <__main__.Actor object at 0x7f16cec6b5f8>]\n"
           ],
           "name": "stdout"
         }
@@ -5888,7 +5887,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "yqkbowE6AE8_",
-        "outputId": "474aaa62-21be-4c4a-8a48-7cbbaf5dfd03",
+        "outputId": "b3c74631-68b6-4311-ab92-65b6950bb26e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -5904,7 +5903,7 @@
         "\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 70,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -6058,11 +6057,11 @@
       "metadata": {
         "id": "n4J-t7gpLS2a",
         "colab_type": "code",
+        "outputId": "05ce6e3c-af1b-489c-e33c-3d4da091f045",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "d79c3da3-468b-462c-d452-c620354965d5"
+        }
       },
       "source": [
         "examples = [0]\n",
@@ -6080,7 +6079,7 @@
         "# sdl object one, time segment 1\n",
         "temp[0]"
       ],
-      "execution_count": 76,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
@@ -6417,7 +6416,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 76
+          "execution_count": 72
         }
       ]
     },
@@ -6426,17 +6425,17 @@
       "metadata": {
         "id": "DWSBGK3pLTla",
         "colab_type": "code",
+        "outputId": "e179fe07-510c-4461-90a0-3326747209eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "3abb2b73-d799-44fc-9473-b60a59a8d257"
+        }
       },
       "source": [
         "# sdl object one, time segment 2\n",
         "temp[1]"
       ],
-      "execution_count": 77,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6748,6 +6747,77 @@
           "metadata": {
             "tags": []
           },
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zfOzaGVUwie7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0a223f85-a88f-4345-c564-a4f023d84bd8"
+      },
+      "source": [
+        "print(len(temp))"
+      ],
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "104940\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AOT3PIt4x-6q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "sparse_tensor_list = []\n",
+        "for item in temp:\n",
+        "  item = tf.expand_dims(item, axis=0)\n",
+        "  sparse_tensor_list.append(tf.sparse.from_dense(item))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eMLvEJHQygrr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2ca0af05-8dff-4401-9280-492af4a396e7"
+      },
+      "source": [
+        "(len(sparse_tensor_list))"
+      ],
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "104940"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
           "execution_count": 77
         }
       ]
@@ -6760,12 +6830,40 @@
         "colab": {}
       },
       "source": [
-        "# **** Ran out of RAM to generate tensor\n",
-        "\n",
-        "# tf.stack(temp)"
+        "x= tf.sparse.concat(0, sparse_tensor_list)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nvWWXsCIysgC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9e80ddef-c00d-44fc-9d51-9837248840c3"
+      },
+      "source": [
+        "x.shape"
+      ],
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "TensorShape([104940, 7, 21, 22])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 81
+        }
+      ]
     }
   ]
 }
