new sdl embedding format that weights actors more than actions in comparison

--- a/SDL_Data_Mining_condensed.ipynb
+++ b/SDL_Data_Mining_condensed.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "SDL_Data_Mining_condensed.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -61,7 +60,7 @@
         "# NLTK to find word stems\n",
         "import nltk"
       ],
-      "execution_count": 13,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -114,7 +113,7 @@
         "bddx = bddx.drop(['Index', '1A', '1J', '2A', '2J', '3A', '3J', '4A', '4J', '5A', '5J', '6A', '6J', '7A', '7J', '8A', '8J', '9A', '9J', '10A', '10J', '11A', '11J', '12A', '12J', '13A', '13J', '14A', '14J', '15A', '15J', ], axis=1)\n",
         "bddx = bddx.drop(bddx.index[0])"
       ],
-      "execution_count": 14,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -148,7 +147,7 @@
         "        self.description = description\n",
         "        self.action = \"\""
       ],
-      "execution_count": 15,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -546,7 +545,7 @@
         "        return\n",
         "\n"
       ],
-      "execution_count": 16,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -562,7 +561,7 @@
         "    sdlList.append(row.astype(str))\n",
         "assert len(sdlList) == 6996, \"length of sdl list should be 6996\""
       ],
-      "execution_count": 17,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -590,7 +589,7 @@
         "for i in range(len(sdlList)):\n",
         "  sdlObjectList.append(SDL(i, sdlStatements[i], sdlList[i]['InputVideo']))"
       ],
-      "execution_count": 18,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -602,7 +601,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "8f58c9b1-fd1f-4ac4-f998-567703bc52f0"
+        "outputId": "e7190bc7-20a7-4ec1-f2f7-8125ed10a2d6"
       },
       "source": [
         "nltk.download('punkt')\n",
@@ -612,7 +611,7 @@
         "  for j in (keysTemp):\n",
         "    sdlObjectList[i].getDescriptors(sdlObjectList[i].statements[j], j)"
       ],
-      "execution_count": 19,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,7 +635,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "b64e23f1-3cfd-4598-8882-fa8ebb7f6241"
+        "outputId": "d94a776f-cdd6-4e72-ff79-a8b748ff50f8"
       },
       "source": [
         "examples = [1,5730,1999] \n",
@@ -652,7 +651,7 @@
         "        print('Time segment:', actorsIndex, \",  %s: %s\"%(sdlObjectList[example].actors[actorsIndex][j].description,sdlObjectList[example].actors[actorsIndex][j].action))\n",
         "    print('Scene: ', sdlObjectList[example].scene)"
       ],
-      "execution_count": 20,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -741,7 +740,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 221
         },
-        "outputId": "a68d3ca3-efb9-48c1-8946-5f88772e7761"
+        "outputId": "845e76ce-c72b-416d-d0bf-d21576bb5213"
       },
       "source": [
         "# Count how many actors have associated actions\n",
@@ -769,7 +768,7 @@
         "    if cutoff <= 0:\n",
         "        break"
       ],
-      "execution_count": 21,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -810,7 +809,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "e283cace-149e-45e9-b735-d3bfed6f6063"
+        "outputId": "904357aa-739e-4a9e-9431-f5c310ba1798"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -822,7 +821,7 @@
         "\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 22,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -880,7 +879,7 @@
         "for idx in range(len(actions)):\n",
         "    action_encoding[actions[idx]] = idx\n"
       ],
-      "execution_count": 23,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -983,7 +982,7 @@
         "      one_hot_sdlEmbedding.append(tf.convert_to_tensor(indices))\n",
         "assert len(one_hot_sdlEmbedding) == 104940, \"length of one_hot_sdlEmbedding should be 104940\""
       ],
-      "execution_count": 24,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -995,7 +994,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "706c4106-43b8-4fef-e21a-75eb397cdee6"
+        "outputId": "87ee37b7-0354-4f8a-fd64-583584af4832"
       },
       "source": [
         "sparse_tensor_list = []\n",
@@ -1007,7 +1006,7 @@
         "sdl_encoding= tf.sparse.concat(0, sparse_tensor_list)\n",
         "sdl_encoding.shape"
       ],
-      "execution_count": 25,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1019,7 +1018,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 13
         }
       ]
     },
@@ -1136,7 +1135,7 @@
         "      sdl_ids.append(\"\".join(sdl_id))\n",
         "assert len(sdl_ids) == 104940, \"length of sdl_ids should be 104940\""
       ],
-      "execution_count": 26,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1187,7 +1186,7 @@
         "  bddx_statements.append(sdlList[i]['15AJ'])\n",
         "assert len(bddx_statements) == 104940, \"length of bddx_statements should be 104940\""
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1423,7 +1422,7 @@
         "from gensim.models.doc2vec import Doc2Vec, TaggedDocument\n",
         "from nltk.tokenize import word_tokenize"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1436,7 +1435,7 @@
       "source": [
         "tagged_data = [TaggedDocument(words=word_tokenize(_d.lower()), tags=[str(i)]) for i, _d in enumerate(sdl_ids)]"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1476,7 +1475,7 @@
         "model.save(\"d2v_sdl_ids.model\")\n",
         "print(\"Model Saved\")"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1579,7 +1578,7 @@
         "model_sdl_ids = Doc2Vec.load(\"d2v_sdl_ids.model\")\n",
         "assert len(model_sdl_ids.docvecs) == 104940, \"Number of vectors, should be 104940\""
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1624,7 +1623,7 @@
         "print(euclidean)\n",
         "print(similairty)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1658,7 +1657,7 @@
         "sdl_ids_condensed = list(filter(lambda a: a != \"NaN:NaN-NaN.\", sdl_ids))\n",
         "print(len(sdl_ids_condensed))\n"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1726,7 +1725,7 @@
         "    # Strip scores for the best n matches\n",
         "    return [x for score, x in result]"
       ],
-      "execution_count": 76,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1770,7 +1769,7 @@
         "    count = len(intersection) \n",
         "    scores.append(count)"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2965,6 +2964,257 @@
             "2172\n",
             "2185\n",
             "2129\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rFt1ZnRaSnqq",
+        "colab_type": "text"
+      },
+      "source": [
+        "# SDL Representation with Matrices"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mYV8V_pbSlR8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "'''\n",
+        "- Each sdl object has a 7x21x22 one hot encoding representing its action, actor and scene element\n",
+        "- These one hot encodings are stacked on top of each other to produce a 4D tensor [examples x actor x action x scene]\n",
+        "- Last element of each dimension represents an NaN value (or empty string for action)\n",
+        "\n",
+        "For each SDL object in sdlObjectList, (2 x n) matrix represents the action-actor pair with n being the number of actor action pairs, (1 x m) matrix \n",
+        "where m represents the number of scene elements\n",
+        "\n",
+        "'''\n",
+        "actor_encoding = {'light vehicle': 0, 'heavy vehicle': 1, 'cyclist': 2, 'pedestrian': 3, 'traffic': 4, 'ego': 5, 'NaN': 6}\n",
+        "\n",
+        "action_encoding = {'turn': 0, 'turn left': 1, 'turn right': 3, 'merge': 4, 'accelerate': 5, 'brake': 6, 'stop': 7, \n",
+        "                   'forward': 8, 'walk': 9, 'park': 10, 'drive': 11, 'reverse': 12, 'merge center': 13, 'merge left': 14, \n",
+        "                   'merge right': 15, 'turn through': 16, 'merge u turn': 17, 'u-turn': 18, 'NaN': 19, '':20}\n",
+        "\n",
+        "scene_encoding = {'intersection': 0, 'crosswalk': 1, 'bridge': 2, 'green light': 3, 'stop sign': 4, 'yield sign': 5, 'sign': 6, \n",
+        "                  'u-turn': 7, 'traffic light': 8, 'traffic signal': 9, 'turn lane': 10, 'crosswalks': 11, 'green traffic light': 12, \n",
+        "                  'light': 13, 'lights': 14, 'red light': 15, 'red traffic light': 16, 'signs': 17, 'traffic lights': 18, \n",
+        "                  'yellow light': 19, 'yellow traffic light': 20, 'NaN': 21}\n",
+        "\n",
+        "sdl_embeddings = []\n",
+        "\n",
+        "for example in range(len(sdlObjectList)): #loops through 6996 sdl objects in sdlObjectList\n",
+        "    # Each sdl object has a 7x21x22 one hot encoding representing its action, actor and scene element\n",
+        "    for a in range(len(sdlObjectList[example].actors)): #loops through 15 time segments\n",
+        "      actorsIndex = str(a+1)\n",
+        "      actor_list = []\n",
+        "      action_list = []\n",
+        "      scene_list = []\n",
+        "      for j in range(len(sdlObjectList[example].actors[actorsIndex])):\n",
+        "        actor_list.append(sdlObjectList[example].actors[actorsIndex][j].description)\n",
+        "        action_list.append(sdlObjectList[example].actors[actorsIndex][j].action)\n",
+        "\n",
+        "      scene_list = sdlObjectList[example].scene[actorsIndex]\n",
+        "      \n",
+        "      # print(\"actor list: \", actor_list)\n",
+        "      # print(\"action list: \", action_list)\n",
+        "      # print(\"scene list: \", scene_list)\n",
+        "\n",
+        "      actor_indices = []\n",
+        "      action_indices = []\n",
+        "      scene_indices = []\n",
+        "\n",
+        "      if (len(actor_list) != len(action_list)):\n",
+        "        print(\"Actor and action list don't match up, this may cause 1 to 1 actor to action correspondence errors\")\n",
+        "        break\n",
+        "      \n",
+        "      sdl_matrices = []\n",
+        "      actor_action_matrix = np.zeros((len(actor_list), 2))\n",
+        "\n",
+        "\n",
+        "      scene_length = 0\n",
+        "      if (len(scene_list) == 0):\n",
+        "          scene_length = 1\n",
+        "      else:\n",
+        "          scene_length = len(scene_list)    \n",
+        "      scene_matrix = np.zeros((scene_length,))\n",
+        "\n",
+        "\n",
+        "      for a_index in actor_list:\n",
+        "        actor_indices.append(actor_encoding[a_index])\n",
+        "\n",
+        "      for act_index in action_list:\n",
+        "        action_indices.append(action_encoding[act_index])\n",
+        "\n",
+        "      if ( ((len(scene_list)) > 0) and scene_list[0] != 'NaN'):\n",
+        "        for i in scene_list:\n",
+        "            scene_indices.append(scene_encoding[i])\n",
+        "      else:\n",
+        "        scene_indices.clear()\n",
+        "        scene_indices.append(21)\n",
+        "\n",
+        "      if (len(actor_indices) != len(action_indices)):\n",
+        "        print(\"make sure each actor is matched up with an action\")\n",
+        "        break\n",
+        "\n",
+        "      for i, actor_index in enumerate(actor_indices):\n",
+        "          actor_action_matrix[i][0] = actor_index\n",
+        "\n",
+        "      for j, action_index in enumerate(action_indices):\n",
+        "          actor_action_matrix[j][1] = action_index\n",
+        "\n",
+        "      for k, scene_index in enumerate(scene_indices):\n",
+        "          scene_matrix[k] = scene_index\n",
+        "\n",
+        "      sdl_matrices.append(actor_action_matrix)\n",
+        "      sdl_matrices.append(scene_matrix)\n",
+        "      sdl_embeddings.append(sdl_matrices)\n",
+        "\n",
+        "assert len(sdl_embeddings) == 104940, \"length of sdlEmbeddings should be 104940\""
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pnMlYyLdgsBp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "615977be-eaa3-40b1-96cc-1f7e37edc598"
+      },
+      "source": [
+        "sdl_embeddings[45][0]"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[5., 8.],\n",
+              "       [4., 8.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fahwioISKipT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "actor_weight = 2.0\n",
+        "action_weight = 1.0\n",
+        "vec3 = sdl_embeddings[45][0]\n",
+        "vec4 = sdl_embeddings[480][0]\n",
+        "temp = np.subtract(np.transpose(vec3), vec4)\n",
+        "temp[np.nonzero(temp)] = 1\n",
+        "actor_action_weights = np.array([actor_weight, action_weight])\n",
+        "temp = np.multiply(temp, actor_action_weights)\n"
+      ],
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yYOZf2ocMN4v",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7f04dc1c-e3c1-4c46-8abd-56113eff75e9"
+      },
+      "source": [
+        "diag_range = range(-temp.shape[0]+2,1, 2) if temp.shape[0]>temp.shape[1] else range(0, temp.shape[1], 2)\n",
+        "diags = [np.abs(temp).trace(i) for i in diag_range]\n",
+        "np.sum(diags)"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PF4TU0ObPx57",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# prep list of sentences\n",
+        "bddx_statements = []\n",
+        "for i in range(len(sdlList)):\n",
+        "  bddx_statements.append(sdlList[i]['1AJ'])\n",
+        "  bddx_statements.append(sdlList[i]['2AJ'])\n",
+        "  bddx_statements.append(sdlList[i]['3AJ'])\n",
+        "  bddx_statements.append(sdlList[i]['4AJ'])\n",
+        "  bddx_statements.append(sdlList[i]['5AJ'])\n",
+        "  bddx_statements.append(sdlList[i]['6AJ'])\n",
+        "  bddx_statements.append(sdlList[i]['7AJ'])\n",
+        "  bddx_statements.append(sdlList[i]['8AJ'])\n",
+        "  bddx_statements.append(sdlList[i]['9AJ'])\n",
+        "  bddx_statements.append(sdlList[i]['10AJ'])\n",
+        "  bddx_statements.append(sdlList[i]['11AJ'])\n",
+        "  bddx_statements.append(sdlList[i]['12AJ'])\n",
+        "  bddx_statements.append(sdlList[i]['13AJ'])\n",
+        "  bddx_statements.append(sdlList[i]['14AJ'])\n",
+        "  bddx_statements.append(sdlList[i]['15AJ'])\n",
+        "assert len(bddx_statements) == 104940, \"length of bddx_statements should be 104940\""
+      ],
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1mticyHRPzQK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3068436c-4d51-49ae-ae45-64b8572e35f1"
+      },
+      "source": [
+        "print(bddx_statements[480])"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The car is stopped because the light is red.\n"
           ],
           "name": "stdout"
         }
