--- a/Ranking.ipynb
+++ b/Ranking.ipynb
@@ -21,7 +21,9 @@
     },
     "colab": {
       "name": "Ranking.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [],
+      "toc_visible": true
     }
   },
   "cells": [
@@ -391,10 +393,114 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "EvGMWohz_oQI"
+      },
+      "source": [
+        "# RBO (NEW)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s5sKXp0N_q3E",
+        "outputId": "9f7db2c5-d71e-4a95-9b6e-2777e8b865c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        }
+      },
+      "source": [
+        "%pip install -e git+https://github.com/changyaochen/rbo.git@master#egg=rbo\n"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Obtaining rbo from git+https://github.com/changyaochen/rbo.git@master#egg=rbo\n",
+            "  Updating ./src/rbo clone (to revision master)\n",
+            "  Running command git fetch -q --tags\n",
+            "  Running command git reset --hard -q 2b2ff7b24534f342a5153573bf384c06317ec2de\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from rbo) (1.18.5)\n",
+            "Installing collected packages: rbo\n",
+            "  Found existing installation: rbo 0.1\n",
+            "    Can't uninstall 'rbo'. No files were found to uninstall.\n",
+            "  Running setup.py develop for rbo\n",
+            "Successfully installed rbo\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_4NCA_fE_thJ",
+        "outputId": "d512f044-0ecc-4c3d-89a5-a2178a352da4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "%cd src/rbo/rbo/"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/src/rbo/rbo\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wzVw53JGBdrn",
+        "outputId": "9b18a1f2-b200-4d94-c883-93a1ea7962a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
+      },
+      "source": [
+        "import rbo\n",
+        "'''\n",
+        "Note there the choice of p is of great importance, since it essentically\n",
+        "control the 'top-weightness'. Simply put, to an extreme, a small p value\n",
+        "will only consider first few items, whereas a larger p value will\n",
+        "consider more itmes. See Eq. (21) for quantitative measure.\n",
+        "'''\n",
+        "S = [1, 2, 3]\n",
+        "T = [1, 3, 2]\n",
+        "# Ranking Similarity function assumes p = 1.0 which is not what we want since we want to weight the top elements, whereas 1.0 just gives an intersection/overlap \n",
+        "x = rbo.RankingSimilarity(S, T).rbo(p=.90)\n",
+        "y = rbo.RankingSimilarity(S, T).rbo(p=.98)\n",
+        "print(x)\n",
+        "print(y)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.22599999999999995\n",
+            "0.049008000000000045\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "WwscxIq1yUCv"
       },
       "source": [
-        "# Kendall Tau"
+        "# RBO (OLD)"
       ]
     },
     {
